fixed again java option issue and created Streaming Aggregation package